testsuite/tests/module/mod76.stderr

mod76.hs:5:1: parse error on input ‛module’
